centres the content of `aligncenter` classed elements (issue #15 Doesnt respect my image alignment selection)

--- a/css/wp_specific.css
+++ b/css/wp_specific.css
@@ -13,3 +13,8 @@
     max-width: 100%;
     height: auto;
 }
+
+.aligncenter {
+    margin-left: auto;
+    margin-right: auto;
+}
